--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logo-hasnur.png"
+  # image_path: "assets/images/logo-hasnur.png"
 # The following section is specific to Flutter.
 flutter:
 
